--- a/basics.ipynb
+++ b/basics.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,47 +32,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1.9"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "x"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'Srishti'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,35 +87,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Welcome to Displaying Data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('Welcome to Displaying Data') # static message to display"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alex\n",
-      "Baron\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a = 'Alex'\n",
     "b = 'Baron'\n",
@@ -147,18 +108,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Alex Baron\n",
-      "Alex Alex Alex Alex\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(a, b)\n",
     "print(a, a, a, a)"
@@ -166,17 +118,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Your name is Srishti\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "name = input('Enter your name')\n",
     "print('Your name is', name)"
@@ -184,17 +128,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You entered 45 and 67\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num1 = input('Enter a number')\n",
     "num2 = input('Enter a number')\n",
@@ -203,19 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The first num is 45\n",
-      "\n",
-      "The second num is 67\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('The first num is', num1)\n",
     "print()\n",
@@ -237,19 +163,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The values are 5, 3.200000, Hello\n",
-      "The values are Hello, 5, 3.200000\n",
-      "The values are Hello, 5, 3.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# format string\n",
     "a, b, c = 5, 3.2, \"Hello\" # multiple assignment\n",
@@ -260,17 +176,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value of a =>5, b =>3.2, c =>Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# format method\n",
     "print('The value of a =>{}, b =>{}, c =>{}'.format(a, b, c))"
@@ -278,21 +186,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World\n",
-      "The value of a =5\n",
-      "The value of c =Hello\n",
-      "The value of b =3.2\n",
-      "The value of a = 5, b = 3.2, c = Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# string concatenation\n",
     "print('Hello ' + 'World')\n",
@@ -304,17 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The value of a =>5, b =>3.2, c =>Hello\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# f-string\n",
     "print(f'The value of a =>{a}, b =>{b}, c =>{c}')"
@@ -329,18 +217,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "10/3 = 3.3333333333333335\n",
-      "10/3 = 3.33\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# formatting values\n",
     "a,b = 10,3\n",
@@ -350,20 +229,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "You are Alex\n",
-      "You are Alex      \n",
-      "You are       Alex\n",
-      "You are                        Alex                       \n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# alignment\n",
     "name = 'Alex'\n",
@@ -375,26 +243,208 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "🍎 fruit 1:       Apple\n",
-      "🍇 fruit 2:   Blueberry\n",
-      "🍒 fruit 3:      Cherry\n",
-      "🍉 fruit 4: Dragonfruit\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "a,b,c,d ='Apple', 'Blueberry', 'Cherry', 'Dragonfruit'\n",
     "print(f'🍎 fruit 1: {a:>11}') \n",
     "print(f'🍇 fruit 2: {b:>11}') \n",
     "print(f'🍒 fruit 3: {c:>11}') \n",
     "print(f'🍉 fruit 4: {d:>11}') "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Operators\n",
+    "- arithmetic `+ - * / % // **`\n",
+    "- assignment `= += -= *= /= and so on`\n",
+    "- comparison\n",
+    "- logical `and or not`\n",
+    "- relationship `in`\n",
+    "- identitiy `is`\n",
+    "- bitwise"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "y = 3\n",
+    "print(f'{x} + {y} = {x+y}')\n",
+    "print(f'{x} - {y} = {x-y}')\n",
+    "print(f'{x} * {y} = {x*y}')\n",
+    "print(f'{x} / {y} = {x/y}')\n",
+    "print(f'{x} % {y} = {x%y}')\n",
+    "print(f'{x} // {y} = {x//y}')\n",
+    "print(f'{x} ** {y} = {x**y}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eq = x**2 + y**2 % 10 - 5 * 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 120\n",
+    "x += 5 # update x by adding 5\n",
+    "x *= 10 # update x by multiplying by 10\n",
+    "x /= 2 # update x by dividing by 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(x > y) # greater than\n",
+    "print(x < y) # less than\n",
+    "print(x == y) # equal to\n",
+    "print(x != y) # not equal to\n",
+    "print(x >= y) # greater than or equal to\n",
+    "print(x <= y) # less than or equal to\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x + 10 > y - 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x > y and x < 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x > y and x < 100 # this will not be displayed \n",
+    "x > 15 or y > 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fruits = ['apple', 'banana', 'cherry', 'date', 'elderberry']\n",
+    "print('cherry' in fruits)\n",
+    "print('Cherry' in fruits)\n",
+    "print('blueberry' in fruits)\n",
+    "print('apple' in fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# this is not the best concept\n",
+    "f = fruits # f is a reference to fruits\n",
+    "print(f is fruits)\n",
+    "f2 = fruits.copy() # f2 is a copy of fruits\n",
+    "print(f2 is fruits)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Typecasting"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 10\n",
+    "xf = float(x)\n",
+    "xs = str(x)\n",
+    "print(x, xf)\n",
+    "print(type(x), type(xf))\n",
+    "# checking if x is an integer\n",
+    "print(isinstance(x, int))\n",
+    "print(isinstance(xf, int))\n",
+    "print(isinstance(x, str))\n",
+    "print(isinstance(xs, (int, float)))\n",
+    "print(isinstance(x, (int, float)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "int('20a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ord('a') # returns the Unicode value of a character"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(chr(97)) # returns the character of a Unicode value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = int(input('Enter a number'))\n",
+    "b = int(input('Enter another number'))\n",
+    "print(a + b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "float('230.35')"
    ]
   },
   {
