--- a/flow.ipynb
+++ b/flow.ipynb
@@ -131,7 +131,7 @@
     "da = (3.3/100) * salary \n",
     "ta = (2.61/100) * salary\n",
     "hra = (5/100) * salary\n",
-    "if(hra < 1000):\n",
+    "if hra < 1000:\n",
     "    total = salary + da + ta\n",
     "    print(total)\n",
     "else :\n",
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -498,6 +498,221 @@
     "# reverse loop\n",
     "for i in range(10,0,-1):\n",
     "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- nested loop\n",
+    "- break and continue\n",
+    "- for-else"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 1,1 2,1 3,\n",
+      "2 1,2 2,2 3,\n",
+      "3 1,3 2,3 3,\n",
+      "4 1,4 2,4 3,\n",
+      "5 1,5 2,5 3,\n",
+      "6 1,6 2,6 3,\n",
+      "7 1,7 2,7 3,\n",
+      "8 1,8 2,8 3,\n",
+      "9 1,9 2,9 3,\n",
+      "10 1,10 2,10 3,\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 11):\n",
+    "    for j in range(1,4):\n",
+    "        print(i, j, end = ',')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 | John | 25 | \n",
+      "2 | Jane | 22 | \n",
+      "3 | Doe | 30 | Engineer | \n"
+     ]
+    }
+   ],
+   "source": [
+    "cdata = [\n",
+    "    [1, 'John', 25],\n",
+    "    [2, 'Jane', 22],\n",
+    "    [3, 'Doe', 30, 'Engineer']\n",
+    "]\n",
+    "\n",
+    "for row in cdata:\n",
+    "    for item in row:\n",
+    "        print(item, end=' | ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 45 67 \n",
+      "23 45 67 \n",
+      "34 56 78 \n",
+      "\n",
+      "23 45 23 \n",
+      "34 56 78 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "more_data = [\n",
+    "    [[12,45,67],[23,45,67],[34,56,78]],\n",
+    "    [[23,45,23], [34,56,78]]\n",
+    "]\n",
+    "\n",
+    "for i in more_data:\n",
+    "    for j in i:\n",
+    "        for k in j:\n",
+    "           print(k, end=' ')\n",
+    "        print()\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "loop executed\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1,2,3,4,5,-1,6,7,8,9,10]\n",
+    "for i in x:\n",
+    "    if i < 0:\n",
+    "        break\n",
+    "    print(i)\n",
+    "print('loop executed')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 6 8 9 11 13 14 15 \n",
+      "alternate way\n",
+      "1 2 3 6 8 9 11 13 14 15 "
+     ]
+    }
+   ],
+   "source": [
+    "data_with_crap = [1,2,3,'4','5',6,'7',8,9,'10',11,'12',13,14,15]\n",
+    "for i in data_with_crap:\n",
+    "    if isinstance(i, str):\n",
+    "        continue\n",
+    "    print(i, end=' ')\n",
+    "\n",
+    "#########alternative########\n",
+    "print('\\nalternate way')\n",
+    "for i in data_with_crap:\n",
+    "    if isinstance(i, int):\n",
+    "        print(i, end=' ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "count: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# adding a check for loop completion\n",
+    "data = [1,2,3,4,5,6,7,8,9,10]\n",
+    "stop_val = int(input('Enter a number to stop at: '))\n",
+    "counter = 0\n",
+    "for i in data:\n",
+    "    if stop_val == i:\n",
+    "        break\n",
+    "    print(i)\n",
+    "    counter += 1\n",
+    "print(f'count: {counter}')\n",
+    "if counter == len(data):\n",
+    "    print('Loop completed all steps')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "Loop stopped at 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = [1,2,3,4,5,6,7,8,9,10]\n",
+    "stop_val = int(input('Enter a number to stop at: '))\n",
+    "for i in data:\n",
+    "    if stop_val == i:\n",
+    "        print(f'Loop stopped at {i}')\n",
+    "        break\n",
+    "    print(i)\n",
+    "else:\n",
+    "    print('Loop completed all steps')"
    ]
   },
   {
