--- a/flow.ipynb
+++ b/flow.ipynb
@@ -716,6 +716,113 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "while loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "9\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "2\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 10\n",
+    "while i > 0:\n",
+    "    print(i)\n",
+    "    i -= 1\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "4567 % 10 => 7 (unit place)\n",
+    "4567 // 10 => 456 (remaining)\n",
+    "456 % 10 => 6 (unit place)\n",
+    "456 // 10 => 45 (remaining)\n",
+    "45 % 10 => 5 (unit place)\n",
+    "45 // 10 => 45 (remaining)\n",
+    "4 % 10 => 4 (unit place)\n",
+    "4 // 10 => 0\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sum([12,34,4,5,6,7])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print=('hi')\n",
+    "sum = 20\n",
+    "del sum # delete the variable sum so that life can be easier\n",
+    "del print # delete the print function so that you can do other things"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "52\n"
+     ]
+    }
+   ],
+   "source": [
+    "# sum of all digits 12345 => 1+2+3+4+5 = 15\n",
+    "num = int(input(\"Enter a number:\"))\n",
+    "total = 0\n",
+    "while num > 0:\n",
+    "    total += num % 10\n",
+    "    num = num // 10\n",
+    "print(total)\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
