--- a/strings.ipynb
+++ b/strings.ipynb
@@ -90,6 +90,583 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "slicing in python\n",
+    "```\n",
+    "x[start: stop]\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "cyclop\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = 'Encyclopedia'\n",
+    "print(len(a))\n",
+    "print(a[2:8]) # last index is not included"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Vijay\n",
+      "Deenanath\n",
+      "Chauhan\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = 'Vijay Deenanath Chauhan'\n",
+    "firstname = name[0:5]\n",
+    "print(firstname)\n",
+    "middlename = name[6:15]\n",
+    "print(middlename)\n",
+    "lastname = name[16:23]\n",
+    "print(lastname)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Vijay'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name[:5] # first 5 characters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Deenanath Chauhan'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name[6:] # from 6th index to end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Chauhan'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name[16:] # from 16th idx to end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Destination'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg = \"Journey Before Destination\"\n",
+    "msg[-11:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'eternia'"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg = 'Once upon a time, there was a place called eternia'\n",
+    "msg[-7:]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Once upon a time'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg[:16]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "800999\n"
+     ]
+    }
+   ],
+   "source": [
+    "amt = \"$800999\"\n",
+    "newamt = amt[1:]\n",
+    "num = int(newamt)\n",
+    "print(num)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Oc pnatm,teewsapaecle tri'"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg[::2] # every 2nd character (even index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'neuo  ie hr a  lc aldeena'"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg[1::2] # every 2nd character (odd index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ainrete dellac ecalp a saw ereht ,emit a nopu ecnO'"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# most OP thing in slicing\n",
+    "msg[::-1] # reverse the string"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'ainre'"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "msg[::-1][:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'htananeeD'"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name[6:15][::-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "string methods\n",
+    "- formatting\n",
+    "- validation\n",
+    "- find & replace\n",
+    "- etc."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "All the glitter is not Gold💛\n",
+      "ALL THE GLITTER IS NOT GOLD💛\n",
+      "all the glitter is not gold💛\n",
+      "All the glitter is not gold💛\n",
+      "All The Glitter Is Not Gold💛\n",
+      "all the glitter is not gold💛\n",
+      "aLL THE GLITTER IS NOT gOLD💛\n"
+     ]
+    }
+   ],
+   "source": [
+    "quote = \"All the glitter is not Gold💛\"\n",
+    "quote_upper = quote.upper()\n",
+    "print(quote)\n",
+    "print(quote_upper)\n",
+    "quote_lower = quote.lower()\n",
+    "print(quote_lower)\n",
+    "quote_capatalize = quote.capitalize()\n",
+    "print(quote_capatalize)\n",
+    "quote_title = quote.title()\n",
+    "print(quote_title)\n",
+    "quote_casefold = quote.casefold()\n",
+    "print(quote_casefold)\n",
+    "quote_swap = quote.swapcase()\n",
+    "print(quote_swap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1;31mSignature:\u001b[0m \u001b[0mquote\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrjust\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mwidth\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mfillchar\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m' '\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m/\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mDocstring:\u001b[0m\n",
+      "Return a right-justified string of length width.\n",
+      "\n",
+      "Padding is done using the specified fill character (default is a space).\n",
+      "\u001b[1;31mType:\u001b[0m      builtin_function_or_method"
+     ]
+    }
+   ],
+   "source": [
+    "quote.rjust?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'______________________All the glitter is not Gold💛'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quote.rjust(50,'_')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'-----------All the glitter is not Gold💛-----------'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quote.center(50,'-')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name.isnumeric()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valid name, very good\n"
+     ]
+    }
+   ],
+   "source": [
+    "fname = input(\"Enter your name: (don't use numbers)\")\n",
+    "if fname.isalpha():\n",
+    "    print(\"valid name, very good\")\n",
+    "else:\n",
+    "    print(\"What kind of name is this?\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "30"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# find and index methods for searching in strings\n",
+    "msg.find('place') # returns the index of the first occurence of the substring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12\n",
+      "39\n",
+      "-1\n",
+      "12\n",
+      "73\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = 'Roshar is a place of magic and wonder, place of knights and kings. Its a place of highstorms and sharpblades'\n",
+    "print(data.find(\"place\"))\n",
+    "print(data.find('place', 13)) # 13 is the starting index for searching\n",
+    "print(data.find('Place')) # -1 means not found\n",
+    "print(data.lower().find('place')) # -1 means not found\n",
+    "# reverse find\n",
+    "print(data.rfind('place')) # returns the index of the last occurence of the substring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Roshar is a 🌎 of magic and wonder, 🌎 of knights and kings. Its a 🌎 of highstorms and sharpblades'"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# replace method\n",
+    "data.replace('place','🌎')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Rashar is a place af magic and wander, place af knights and kings. Its a place af highstarms and sharpblades'"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.replace('o','a')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Roshbr es b plbce of mbgec bnd wonder, plbce of cneghts bnd cengs. Its b plbce of heghstorms bnd shbrpblbdes'"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.replace('i','e').replace('k','c').replace('a','b')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Roshar_is_a_place of magic and wonder, place of knights and kings. Its a place of highstorms and sharpblades'"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.replace(' ','_', 3)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
