string functions and practice

--- a/strings.ipynb
+++ b/strings.ipynb
@@ -668,6 +668,544 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "26\n",
+      "apple banana cherry durian\n",
+      "['apple', 'banana', 'cherry', 'durian']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits = input(\"Enter names of fruits\")\n",
+    "print(len(fruits))\n",
+    "print(fruits)\n",
+    "fruitlist = fruits.split()\n",
+    "print(fruitlist)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['This', 'is', 'some', 'message']"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'This is some message'.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Life before death',\n",
+       " ' strength before weakness',\n",
+       " ' journey before destination']"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quote = \"Life before death, strength before weakness, journey before destination\"\n",
+    "quote.split(',')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Life ', ' death, strength ', ' weakness, journey ', ' destination']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quote.split('before')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Johnny Johnny, yes papa',\n",
+       " 'eating sugar? no papa',\n",
+       " 'telling lies? no papa',\n",
+       " 'open your mouth, ha ha ha']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "poem = '''Johnny Johnny, yes papa\n",
+    "eating sugar? no papa\n",
+    "telling lies? no papa\n",
+    "open your mouth, ha ha ha'''\n",
+    "poem.splitlines()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'C:/users/zaid/desktop/file.txt'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "addr = ['C:','users','zaid','desktop','file.txt']\n",
+    "\"/\".join(addr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['alex', 'dec', '1880']\n",
+      "img_alex_dec_1880.jpg\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = input(\"Enter ur name, month and year of birth separated by comma: \")\n",
+    "words = data.split(',')\n",
+    "print(words)\n",
+    "name = \"_\".join(words)\n",
+    "print(f'img_{name}.jpg')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Srishti\n"
+     ]
+    }
+   ],
+   "source": [
+    "str = 'My name is Srishti'\n",
+    "print(str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "s = input(\"Enter your name: \")\n",
+    "print(len(s))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "great\n"
+     ]
+    }
+   ],
+   "source": [
+    "p = 'Python is great'\n",
+    "print(p[10:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "python\n",
+      "is\n",
+      "everywhere\n"
+     ]
+    }
+   ],
+   "source": [
+    "py = 'python is everywhere'\n",
+    "print(py[:6])\n",
+    "print(py[7:9])\n",
+    "print(py[10:])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "!dlroW ,olleH\n"
+     ]
+    }
+   ],
+   "source": [
+    "wel = 'Hello, World!'\n",
+    "print(wel[::-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "HOW ARE YOU?\n"
+     ]
+    }
+   ],
+   "source": [
+    "he = 'How are you?'\n",
+    "print(he.upper())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how is it going?\n"
+     ]
+    }
+   ],
+   "source": [
+    "life = 'How Is It Going?'\n",
+    "print(life.lower())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Python is easy to learn'"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sen = 'Python is easy to learn'\n",
+    "sen1 = sen.split()\n",
+    "\" \".join(sen1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi! My name is Srishti\n",
+      "Hope u r fine\n",
+      "lets party!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( '''Hi! My name is Srishti\n",
+    "Hope u r fine\n",
+    "lets party!!!''')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "to move to newline '\\n' is used.\n",
+      "to move to newline '\\n' is used.\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"to move to newline '\\\\n' is used.\")\n",
+    "print(r\"to move to newline '\\n' is used.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before occurs 3 times in the quote\n"
+     ]
+    }
+   ],
+   "source": [
+    "# count method\n",
+    "n = quote.count('before')\n",
+    "print(f'before occurs {n} times in the quote')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "13"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "quote.count('e')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Mr Bean'.startswith('Mr')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'Mr Bean'.startswith('Ms')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "This is a meeting of gentlemen only\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = input('Enter ur name')\n",
+    "if name.startswith('Mr'):\n",
+    "    print('Hello Sir')\n",
+    "else:\n",
+    "    print('This is a meeting of gentlemen only')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "filename: yaya.csv\n",
+      "Dataset file\n"
+     ]
+    }
+   ],
+   "source": [
+    "filename = input('Enter filename')\n",
+    "print(f\"filename: {filename}\")\n",
+    "if filename.endswith('.csv'):\n",
+    "    print(\"Dataset file\")\n",
+    "elif filename.endswith('.txt'):\n",
+    "    print(\"Text file\")\n",
+    "elif filename.endswith('.jpg'):\n",
+    "    print(\"Image file\")\n",
+    "else:\n",
+    "    print(\"Invalid\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " wish\n",
+      "movie: 5\n",
+      "clean name: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# strip \n",
+    "movie = input('Enter movie name:')\n",
+    "clean_movie = movie.strip()\n",
+    "print(movie)\n",
+    "print(clean_movie)\n",
+    "print(f'movie: {len(movie)}')\n",
+    "print(f'clean name: {len(clean_movie)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 58,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'  hello'.strip()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('\\n\\n\\thello\\n\\n'.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
