--- a/strings.ipynb
+++ b/strings.ipynb
@@ -1206,6 +1206,108 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'hello'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "',,hello***'.strip(',*')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"fyi\" in \"laksjdklashello\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jdjhfnfnmdnk\n"
+     ]
+    }
+   ],
+   "source": [
+    "from string import punctuation, digits\n",
+    "# print(punctuation)\n",
+    "text = 'jdjhfnfnmdnk%'\n",
+    "for i in punctuation+ digits:\n",
+    "    text = text.replace(i,'')\n",
+    "print(text)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "heo\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = \"hello\"\n",
+    "a = a.replace('l','')\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.642857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentences = 'this is a paragraph which is written just for the purpose of providing content'\n",
+    "total = 0\n",
+    "for word in sentences.split():\n",
+    "    total += len(word)\n",
+    "print(total/len(sentences.split()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
