--- a/strings.ipynb
+++ b/strings.ipynb
@@ -836,6 +836,7 @@
     }
    ],
    "source": [
+    "#1\n",
     "str = 'My name is Srishti'\n",
     "print(str)"
    ]
@@ -854,6 +855,7 @@
     }
    ],
    "source": [
+    "#2\n",
     "s = input(\"Enter your name: \")\n",
     "print(len(s))"
    ]
@@ -872,6 +874,7 @@
     }
    ],
    "source": [
+    "#3\n",
     "p = 'Python is great'\n",
     "print(p[10:])"
    ]
@@ -892,6 +895,7 @@
     }
    ],
    "source": [
+    "#4\n",
     "py = 'python is everywhere'\n",
     "print(py[:6])\n",
     "print(py[7:9])\n",
@@ -912,6 +916,7 @@
     }
    ],
    "source": [
+    "#5\n",
     "wel = 'Hello, World!'\n",
     "print(wel[::-1])"
    ]
@@ -930,6 +935,7 @@
     }
    ],
    "source": [
+    "#6\n",
     "he = 'How are you?'\n",
     "print(he.upper())"
    ]
@@ -948,6 +954,7 @@
     }
    ],
    "source": [
+    "#7\n",
     "life = 'How Is It Going?'\n",
     "print(life.lower())"
    ]
@@ -969,6 +976,7 @@
     }
    ],
    "source": [
+    "#8\n",
     "sen = 'Python is easy to learn'\n",
     "sen1 = sen.split()\n",
     "\" \".join(sen1)"
@@ -990,6 +998,7 @@
     }
    ],
    "source": [
+    "#9\n",
     "print( '''Hi! My name is Srishti\n",
     "Hope u r fine\n",
     "lets party!!!''')"
@@ -1010,6 +1019,7 @@
     }
    ],
    "source": [
+    "#10\n",
     "print(\"to move to newline '\\\\n' is used.\")\n",
     "print(r\"to move to newline '\\n' is used.\")"
    ]
@@ -1241,26 +1251,28 @@
     }
    ],
    "source": [
+    "#23\n",
     "\"fyi\" in \"laksjdklashello\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jdjhfnfnmdnk\n"
+      "python\n"
      ]
     }
    ],
    "source": [
+    "#24\n",
     "from string import punctuation, digits\n",
     "# print(punctuation)\n",
-    "text = 'jdjhfnfnmdnk%'\n",
+    "text = '%p34@y!*-*!t68h#&on404'\n",
     "for i in punctuation+ digits:\n",
     "    text = text.replace(i,'')\n",
     "print(text)\n"
@@ -1299,7 +1311,8 @@
     }
    ],
    "source": [
-    "sentences = 'this is a paragraph which is written just for the purpose of providing content'\n",
+    "#25\n",
+    "sentences = 'this is a paragraph which is written just for the purpose of providing content to let the average word length be calculated'\n",
     "total = 0\n",
     "for word in sentences.split():\n",
     "    total += len(word)\n",
