functions return, default parameters, named arguments, lambda

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -278,14 +278,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "thisaye isaye someaye text\n"
+      "thisaye\n",
+      "isaye\n",
+      "someaye\n",
+      "textaye\n"
      ]
     }
    ],
@@ -293,8 +296,9 @@
     "#22\n",
     "text = 'this is some text'\n",
     "real = text.split()\n",
-    "newtext = 'aye '.join(real)\n",
-    "print(newtext)\n"
+    "for i in real:\n",
+    "    newtext = i + 'aye'\n",
+    "    print(newtext)\n"
    ]
   },
   {
