--- a/functions.ipynb
+++ b/functions.ipynb
@@ -125,6 +125,303 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def area(l, b):\n",
+    "    a = l * b\n",
+    "    print(f'area -> {a}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# professional way of writing a function\n",
+    "def perimeter(l: int, b: int) -> None:\n",
+    "    '''\n",
+    "    calculates the perimeter of a rectangle\n",
+    "\n",
+    "    l -> length of the rectangle\n",
+    "\n",
+    "    b -> breadth of the rectangle\n",
+    "    '''\n",
+    "    p = 2 * (l + b)\n",
+    "    print(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "area -> 72\n"
+     ]
+    }
+   ],
+   "source": [
+    "area(12, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "36\n"
+     ]
+    }
+   ],
+   "source": [
+    "perimeter(12, 6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def fiver():\n",
+    "    from random import choices\n",
+    "    data = list(range(1,101))\n",
+    "    return choices(data, k=5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[31, 48, 32, 73, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(fiver())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[84, 28, 36, 26, 77]\n",
+      "[22, 96, 65, 6, 76]\n"
+     ]
+    }
+   ],
+   "source": [
+    "trial_1 = fiver()\n",
+    "trial_2 = fiver()\n",
+    "print(trial_1)\n",
+    "print(trial_2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def area_circle(r: int):\n",
+    "    a = 3.14 * r * r\n",
+    "    return a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Area of the circle with radius: 45 is 6358.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "radius = int(input('Enter the radius of the circle: '))\n",
+    "ans = area_circle(radius)\n",
+    "print(f'Area of the circle with radius: {radius} is {ans:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### waf to remove all the vowels from a string passed as a parameter"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def remove_vowels(old_str: str):\n",
+    "    str1 = old_str.lower()\n",
+    "    for i in str1:\n",
+    "        if i == 'a' or i == 'e' or i == 'i' or i == 'o' or i == 'u':\n",
+    "            str1 = str1.replace(i, '')\n",
+    "    return str1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vow(a: str):\n",
+    "    return a.replace('a','').replace('e','').replace('i','').replace('o','').replace('u','')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "srsht\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = input('Enter a word: ')\n",
+    "new_word = remove_vowels(word)\n",
+    "print(new_word)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def summer(a, b, c=0, d=0):\n",
+    "    return a + b + c + d  # c and d are default"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "10\n",
+      "17\n",
+      "22\n",
+      "25\n",
+      "100\n",
+      "100\n",
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(summer(10, 20))\n",
+    "print(summer(2, 3, 5)) # positional argument\n",
+    "print(summer(2, 3, d=12)) # named arguments (keyword arguments)\n",
+    "print(summer(2, 3, d=12, c=5)) # named arguments allows changing the order of the arguments\n",
+    "print(summer(5, 5, c=5, d=10))\n",
+    "print(summer(a=10, b=20, c=30, d=40))\n",
+    "print(summer(a=20, b=10, d=40, c=30))\n",
+    "print(summer(10, b=20, c=30, d=40))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lambda expression - anonymous function\n",
+    "```\n",
+    "f(x) = x + 5 * x - 2\n",
+    "f(2)\n",
+    "g(x, y) = x + y /2\n",
+    "g(2,3)\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<function <lambda> at 0x00000206250C1800>\n"
+     ]
+    }
+   ],
+   "source": [
+    "f = lambda x: x + 5 * x - 2\n",
+    "g = lambda x,y: x + y / 2\n",
+    "print(f) #not needed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "28\n",
+      "58\n",
+      "3.5\n",
+      "7.5\n",
+      "6.0\n",
+      "3.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f(2))\n",
+    "print(f(5))\n",
+    "print(f(10))\n",
+    "print(g(2,3))\n",
+    "print(g(5,5))\n",
+    "print(g(5,2))\n",
+    "ans = g(2,3)\n",
+    "print(ans)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
