practice ques complete

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -99,33 +99,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.\n",
-      "2.\n",
-      "3.\n",
-      "4.\n",
-      "5.\n",
-      "6.\n",
-      "7.\n",
-      "8.\n",
-      "9\n"
-     ]
-    }
-   ],
-   "source": [
-    "str = \"123456789\"\n",
-    "str.split()\n",
-    "print('.\\n'.join(str))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [
@@ -591,6 +564,242 @@
     "    print(\"Palindrome\")\n",
     "else:\n",
     "    print('Non-palindrome')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the average of the list is: 5.50\n"
+     ]
+    }
+   ],
+   "source": [
+    "#11\n",
+    "list_num = [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n",
+    "total = 0\n",
+    "c = 0\n",
+    "avg = 0\n",
+    "for el in list_num:\n",
+    "    total = total + el\n",
+    "    c = c + 1\n",
+    "avg = total / c\n",
+    "print(f'the average of the list is: {avg:.2f}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The smallest element is: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "#12\n",
+    "list_numbers = [12, 34, 56, 78, 90, 23, 45, 9, 2, 100]\n",
+    "length = len(list_numbers)\n",
+    "count = 1\n",
+    "small = list_numbers[0]\n",
+    "while count != length:\n",
+    "    if list_numbers[count] < small:\n",
+    "        small = list_numbers[count]\n",
+    "    count = count + 1\n",
+    "print(f'The smallest element is: {small}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "#13\n",
+    "number = input('Enter a number: ')\n",
+    "s = 0\n",
+    "for digit in number:\n",
+    "    s = s + int (digit)\n",
+    "print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The list have a leap year in it\n"
+     ]
+    }
+   ],
+   "source": [
+    "#14\n",
+    "data = list(range(2001, 2011))\n",
+    "size = len(data)\n",
+    "part = 0\n",
+    "c = 0\n",
+    "while  part != size:\n",
+    "    if data[part] % 4 == 0:\n",
+    "        c = c + 1\n",
+    "        break\n",
+    "    else:\n",
+    "        part = part + 1\n",
+    "if c > 0:\n",
+    "    print('The list have a leap year in it')\n",
+    "else:\n",
+    "    print('The list does not have a leap year in it')\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 \n",
+      "2 4 6 8 10 12 14 16 18 20 \n",
+      "3 6 9 12 15 18 21 24 27 30 \n",
+      "4 8 12 16 20 24 28 32 36 40 \n",
+      "5 10 15 20 25 30 35 40 45 50 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#15\n",
+    "table_num = [1, 2, 3, 4, 5]\n",
+    "for piece in table_num:\n",
+    "    for table in range(1,11):\n",
+    "        print(table * piece, end=\" \")\n",
+    "    print()\n",
+    "print()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120\n"
+     ]
+    }
+   ],
+   "source": [
+    "#16\n",
+    "num = int(input(\"Enter a number\"))\n",
+    "f = 1\n",
+    "for fact in range(1, num+1):\n",
+    "    f = f * fact\n",
+    "print(f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number of vowels are: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "#17\n",
+    "str = input(\"Enter a sentence: \")\n",
+    "str = str.lower()\n",
+    "vowel = 0\n",
+    "for alpha in str:\n",
+    "    if alpha == 'a' or alpha == 'e' or alpha == 'i' or alpha == 'o' or alpha == 'u':\n",
+    "        vowel = vowel + 1\n",
+    "print(f'The number of vowels are: {vowel}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The largest element of the array is: 100\n",
+      "The smallest element of the array is: 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "#18\n",
+    "arr = [16, 27, 38, 45, 90, 100, 1, 35, 67, 98]\n",
+    "max = arr[0]\n",
+    "min = arr[0]\n",
+    "for el in arr:\n",
+    "    if el > max:\n",
+    "        max = el\n",
+    "    if el < min:\n",
+    "        min = el\n",
+    "print(f'The largest element of the array is: {max}')\n",
+    "print(f'The smallest element of the array is: {min}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "you are how hello \n"
+     ]
+    }
+   ],
+   "source": [
+    "#19\n",
+    "sen = input('Enter a sentence: ')\n",
+    "sen = sen + ' '\n",
+    "word = ''\n",
+    "new_sen = ''\n",
+    "for alphabet in sen:\n",
+    "    if alphabet != ' ':\n",
+    "        word = word + alphabet\n",
+    "    else:\n",
+    "        new_sen = word + ' ' + new_sen\n",
+    "        word = ''\n",
+    "print(new_sen)"
    ]
   },
   {
