--- a/data_structures.ipynb
+++ b/data_structures.ipynb
@@ -439,8 +439,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# wap to create an empty list , then fill the list with 10 prime numbers using a loop, starting with two "
+    "### wap to create an empty list , then fill the list with 10 prime numbers using a loop, starting with two "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 3, 5, 7, 11, 13, 17, 19, 23, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "prime = []\n",
+    "c = 0\n",
+    "val = 0\n",
+    "for i in range(2,100):\n",
+    "    for j in range(1,i+1):\n",
+    "        if i % j == 0:\n",
+    "            c = c + 1\n",
+    "    if c == 2:\n",
+    "        prime.insert(val,i)\n",
+    "        val = val + 1 \n",
+    "    c = 0\n",
+    "    if val == 10:\n",
+    "        break\n",
+    "print(prime)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
