--- a/practice.ipynb
+++ b/practice.ipynb
@@ -803,6 +803,77 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lists"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[45, 56, 54, 23, 12, 7, 8, 9, 10, 49]\n"
+     ]
+    }
+   ],
+   "source": [
+    "list = []\n",
+    "for i in range(10):\n",
+    "    list.append(int(input('Enter a number: ')))\n",
+    "print(list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The number is in the list\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [12,34,56,21,38,90,67,76,54,1]\n",
+    "c = 0\n",
+    "search = int(input('Enter a number: '))\n",
+    "for i in numbers:\n",
+    "    if search == i:\n",
+    "        print('The number is in the list')\n",
+    "        c = c + 1\n",
+    "if c == 0:\n",
+    "    print('The number is not in the list')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['ayush', 'mansi', 'om', 'omi', 'shreya']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['ayush','shreya','mansi','omi','om']\n",
+    "names.sort()\n",
+    "print(names)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
