--- a/basics.ipynb
+++ b/basics.ipynb
@@ -350,9 +350,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "False\n",
+      "False\n",
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "fruits = ['apple', 'banana', 'cherry', 'date', 'elderberry']\n",
     "print('cherry' in fruits)\n",
