questions, format and correction

--- a/data_structures.ipynb
+++ b/data_structures.ipynb
@@ -4,15 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "list                              tuple                            set                      dictionary\n",
-    "indexed                           indexed                          unindexed                 unindexed\n",
-    "ordered                           ordered                           unordered                 ordered\n",
-    "mutable                           immutable                         mutable                    mutable\n",
-    "heterogenous                      heterogenous                    heterogenous                 heterogenous\n",
-    "have duplicate                   have duplicate               only uniques values             have duplicate\n",
-    "just values                       just values                   just values                      key values pair\n",
-    "[]                                   ()                              {}                        {}\n",
-    "list()                             tuple()                           set()                     dict()"
+    "list- indexed, ordered, mutable, heterogenous, have duplicate, just values, [], list()\n",
+    "\n",
+    "tuple- indexed, ordered, immutable, heterogenous, have duplicate, just values, (), tuple()\n",
+    "\n",
+    "set- unindexed, unordered, mutable, heterogenous, only uniques values, just values, {}, set()\n",
+    "\n",
+    "dictionary- unindexed, ordered, mutable, heterogenous, have duplicate, key values pair, {}, dict()"
    ]
   },
   {
