--- a/practice.ipynb
+++ b/practice.ipynb
@@ -823,6 +823,7 @@
     }
    ],
    "source": [
+    "#1\n",
     "list = []\n",
     "for i in range(10):\n",
     "    list.append(int(input('Enter a number: ')))\n",
@@ -843,6 +844,7 @@
     }
    ],
    "source": [
+    "#2\n",
     "numbers = [12,34,56,21,38,90,67,76,54,1]\n",
     "c = 0\n",
     "search = int(input('Enter a number: '))\n",
@@ -868,6 +870,7 @@
     }
    ],
    "source": [
+    "#3\n",
     "names = ['ayush','shreya','mansi','omi','om']\n",
     "names.sort()\n",
     "print(names)"
@@ -875,10 +878,32 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n"
+     ]
+    }
+   ],
+   "source": [
+    "#4\n",
+    "num = [12,34,56,65,40,100,2,5,67,10]\n",
+    "num.sort()\n",
+    "print(num[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#5\n"
+   ]
   }
  ],
  "metadata": {
