--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -183,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,8 +195,7 @@
       " [7 8 9]]\n",
       "[[1 2 3]\n",
       " [2 3 4]\n",
-      " [3 4 5]]\n",
-      "[1 2 3]\n"
+      " [3 4 5]]\n"
      ]
     }
    ],
@@ -204,8 +203,7 @@
     "x = np.array([[1,2,3],[4,5,6],[7,8,9]])\n",
     "print(x)\n",
     "y = np.array([[1,2,3],[2,3,4],[3,4,5]])\n",
-    "print(y)\n",
-    "print(x.min(axis = 0))"
+    "print(y)\n"
    ]
   },
   {
@@ -251,7 +249,7 @@
     }
    ],
    "source": [
-    "print(x@y)"
+    "print(x@y) # or np.dot(x,y)"
    ]
   },
   {
@@ -272,6 +270,80 @@
    ],
    "source": [
     "x.prod()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(5.0)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([4., 5., 6.])"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x.mean(axis = 0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.min(axis = 0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 4 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(x.min(axis = 1))"
    ]
   },
   {
